* update vulkan-icd-loader to 1.2.195-1

--- a/vulkan-icd-loader/PKGBUILD
+++ b/vulkan-icd-loader/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Laurent Carlier <lordheavym@gmail.com>
 
 pkgname=vulkan-icd-loader
-pkgver=1.2.191
+pkgver=1.2.195
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 pkgdesc="Vulkan Installable Client Driver (ICD) Loader"
@@ -12,8 +12,15 @@ makedepends=('cmake' 'python-lxml' 'libx11' 'libxrandr' 'wayland' 'vulkan-header
 depends=(glibc)
 optdepends=('vulkan-driver: packaged vulkan driver') # vulkan-driver: vulkan-intel/vulkan-radeon/nvidia-utils/....
 provides=('libvulkan.so')
-source=("${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/Vulkan-Loader/archive/v${pkgver}.tar.gz")
-sha256sums=('f884765bc5a2fb5f6f810adfe5cb53ffe5541f2b423d13e1953205fd2028deff')
+source=("${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/Vulkan-Loader/archive/v${pkgver}.tar.gz"
+	vulkan-loader-700-revert.patch)
+sha256sums=('4cc64cb2a9d7ee78132c4d4cfb66ac1be0651eac4364245d48af5ba8b7cbf282'
+            '1e7e0e8e4276004b37b3680066bcc73fef6ca087a2f3b02236de0fc7b1f1dfd9')
+
+prepare() {
+  cd "${srcdir}"/Vulkan-Loader*
+  patch -Np1 -i ${srcdir}/vulkan-loader-700-revert.patch
+}
 
 build() {
   cd "${srcdir}"/Vulkan-Loader*
