* update vulkan-icd-loader to 1.2.195-1

--- a/vulkan-icd-loader/PKGBUILD
+++ b/vulkan-icd-loader/PKGBUILD
@@ -19,6 +19,8 @@ sha256sums=('4cc64cb2a9d7ee78132c4d4cfb66ac1be0651eac4364245d48af5ba8b7cbf282'
 
 prepare() {
   cd "${srcdir}"/Vulkan-Loader*
+  # if git is found assumes to check for .git/HEAD and
+  # fails cmake. of course, screw this.
   patch -Np1 -i ${srcdir}/vulkan-loader-700-revert.patch
 }
 
