--- a/kde/sddm/PKGBUILD
+++ b/kde/sddm/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=sddm
 pkgver=0.19.0
-pkgrel=6
+pkgrel=7
 pkgdesc='QML based X11 and Wayland display manager'
 arch=(x86_64 powerpc64le powerpc)
 url='https://github.com/sddm/sddm'
@@ -48,7 +48,8 @@ build() {
         -DCMAKE_INSTALL_LIBEXECDIR=/usr/lib/sddm \
         -DDBUS_CONFIG_DIR=/usr/share/dbus-1/system.d \
         -DDBUS_CONFIG_FILENAME=sddm_org.freedesktop.DisplayManager.conf \
-        -DBUILD_MAN_PAGES=ON
+        -DBUILD_MAN_PAGES=ON \
+        -DUID_MAX=60513
   cmake --build build
 }
 
