* update rust to 1:1.55.0-1

--- a/rust/PKGBUILD
+++ b/rust/PKGBUILD
@@ -7,7 +7,7 @@
 
 pkgname=('rust' 'rust-docs')
 epoch=1
-pkgver=1.54.0
+pkgver=1.55.0
 pkgrel=1
 
 _llvm_ver=12.0.1
@@ -15,11 +15,11 @@ _bootstrap_ver=1.53.0
 
 pkgdesc='Systems programming language focused on safety, speed and concurrency'
 url='https://www.rust-lang.org/'
-arch=(powerpc powerpc64le)
+arch=(powerpc64le powerpc)
 license=('MIT' 'Apache')
 
 makedepends=("llvm=$_llvm_ver" 'libffi' 'perl' 'python'
-             'curl' 'cmake'  'ninja')
+             'curl' 'cmake'  'ninja' 'rust')
 makedepends_powerpc64le=('rust')
 makedepends_x86_64=('rust')
 checkdepends=('procps-ng' 'gdb')
@@ -36,12 +36,9 @@ source=(
   0007-test-sysroot-crates-are-unstable-Fix-test-when-rpath.patch
   0009-Link-stage2-tools-dynamically-to-libstd.patch
   0016-do-not-copy-libunwind.patch
-  https://alpha.de.repo.voidlinux.org/distfiles/cargo-0.54.0-powerpc-unknown-linux-gnu.tar.xz
-  https://alpha.de.repo.voidlinux.org/distfiles/rust-std-${_bootstrap_ver}-powerpc-unknown-linux-gnu.tar.xz
-  https://alpha.de.repo.voidlinux.org/distfiles/rustc-${_bootstrap_ver}-powerpc-unknown-linux-gnu.tar.xz
   fix-ppc32.patch
 )
-sha256sums=('ac8511633e9b5a65ad030a1a2e5bdaa841fdfe3132f2baaa52cc04e71c6c6976'
+sha256sums=('b2379ac710f5f876ee3c3e03122fe33098d6765d371cac6c31b1b6fc8e43821e'
             'SKIP'
             'b4c8d5f2a802332987c1c0a95b5afb35b1a66a96fe44add4e4ed4792c4cba0a4'
             'SKIP'
@@ -52,9 +49,6 @@ sha256sums=('ac8511633e9b5a65ad030a1a2e5bdaa841fdfe3132f2baaa52cc04e71c6c6976'
             '95ca814677947e87344b0890fd0d323f8dba567fa390219b92debdca71f14ff2'
             '0883036789d8f8523de8896f9eed5c50d714c67ccbefddb46de0a80be76f3c39'
             'c2394b6ee55374fce587ec03c3ffc5bd684aa67194b1bed4c34a162245b535f4'
-            '176f178b9e55f399311edb4888d931e5f696766f655cc9648ae4b6ef1bdc8369'
-            '6006f7f78e30810e8b929ab5ab97cf5e4488a25f7fe6a49a1a548dd4745281e0'
-            'be6ca5e02c04329b082eaf717ba2ea370d676a93e520cd5988883ea2ed8cb750'
             '7d0ca701816f4c02fa245a173b5330140089344a06ecf11f9516422008346f65')
 validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
@@ -74,20 +68,13 @@ prepare() {
   patch -Np1 -i ../0009-Link-stage2-tools-dynamically-to-libstd.patch
   patch -Np1 -i ../0016-do-not-copy-libunwind.patch
 
+  BOOTSTRAP_PATH="/usr/bin"
   case "${CARCH}" in
     powerpc) 
       patch -Np1 -i ../fix-ppc32.patch
-      mkdir -p ${srcdir}/bootstrap/{bin,lib,share}
-      cp ${srcdir}/cargo-0.54.0-${CHOST}/cargo/bin/cargo ${srcdir}/bootstrap/bin/cargo
-      ${srcdir}/rust-std-${_bootstrap_ver}-${CHOST}/install.sh \
-	       --destdir="${srcdir}/bootstrap" --prefix=/ --disable-ldconfig
-      ${srcdir}/rustc-${_bootstrap_ver}-${CHOST}/install.sh \
-         --destdir="${srcdir}/bootstrap" --prefix=/ --disable-ldconfig
-      BOOTSTRAP_PATH="${srcdir}/bootstrap/bin"
       BUILD_TOOLS='"cargo", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
     ;;
     *)
-      BOOTSTRAP_PATH="/usr/bin"
       BUILD_TOOLS='"cargo", "rls", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
     ;;
   esac
