--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Schmidtke <sjakub@gmail.com>
 
 pkgname=firefox
-pkgver=92.0.1
+pkgver=93.0
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org"
 arch=(x86_64 powerpc64le)
@@ -13,7 +13,7 @@ url="https://www.mozilla.org/firefox/"
 depends=(gtk3 libxt mime-types dbus-glib ffmpeg nss ttf-font libpulse jemalloc)
 makedepends=(unzip zip diffutils mesa imake inetutils xorg-server-xvfb
              autoconf2.13 rust clang llvm jack gtk2 nodejs-lts-dubnium cbindgen
-             python-setuptools python-psutil gcc10)
+             python-setuptools python-psutil)
 optdepends=('networkmanager: Location detection via available WiFi networks'
             'libnotify: Notification integration'
             'pulseaudio: Audio support'
@@ -27,11 +27,10 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         big-endian-image-decoders.patch
         fix-image-format-warning.patch
         ppc32-fix-build.patch
-        skia-sucks{1,2,3}.patch
         flac-no-ffvpx.patch
         firefox-pgo.patch
         avoid-redefinition.patch)
-sha256sums=('9096b22e162cd299080d5eef8f3627a71a594ceba2b89e3000f2c3e8ea603eb1'
+sha256sums=('a78f080f5849bc284b84299f3540934a12e961a7ea368b592ae6576ea1f97102'
             'SKIP'
             'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
             'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
@@ -39,9 +38,6 @@ sha256sums=('9096b22e162cd299080d5eef8f3627a71a594ceba2b89e3000f2c3e8ea603eb1'
             '0df637d44218524e213814d15d623f27724d8e405390173f6cc385e145110bfe'
             '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
             'cc24b6b95ff11ebf3bb29e0270f357169c7fff00c2a6f33e6c2b701096e7da9e'
-            '9cdffb3f91e0956f4147c8556c80b97bcae448b84ce0d0a0e009a231a9915396'
-            'd98af26b723a8b590822a3d1ab925841b99882c158d3dec7514288c968f2428e'
-            '851503764a3068d36659b9231c9aaa40fe8a15680f7d0a378e9009ae1a776dae'
             '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
             'f75fef9272a9ea1badd8a4cbf0247d03b6bece8582772b508f3649840a56d573'
             '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf')
@@ -70,17 +66,14 @@ prepare() {
   patch -Np0 -i ${srcdir}/big-endian-image-decoders.patch
   patch -Np0 -i ${srcdir}/fix-image-format-warning.patch
   patch -Np0 -i ${srcdir}/ppc32-fix-build.patch
-  patch -Np0 -i ${srcdir}/skia-sucks1.patch
-  patch -Np0 -i ${srcdir}/skia-sucks2.patch
-  patch -Np0 -i ${srcdir}/skia-sucks3.patch
   patch -Np0 -i ${srcdir}/flac-no-ffvpx.patch
   patch -Np0 -i ${srcdir}/avoid-redefinition.patch
 
   case "${CARCH}" in
     powerpc64le)
-      patch -Np1 -i ${srcdir}/${pkgname}-pgo.patch
-      CC=gcc-10
-      CXX=g++-10
+      #patch -Np1 -i ${srcdir}/${pkgname}-pgo.patch
+      CC=gcc
+      CXX=g++
       ;;
     *)
       CC=clang
