--- a/kde/xdg-desktop-portal/PKGBUILD
+++ b/kde/xdg-desktop-portal/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Patrick Griffis <tingping@tingping.se>
 
 pkgname=xdg-desktop-portal
-pkgver=1.8.1
+pkgver=1.10.1
 pkgrel=1
 pkgdesc="Desktop integration portals for sandboxed apps"
 url="https://github.com/flatpak/xdg-desktop-portal"
@@ -12,9 +12,8 @@ arch=(x86_64 powerpc64le powerpc)
 license=(LGPL)
 depends=(glib2 pipewire fuse2 geoclue2)
 makedepends=(python xmlto docbook-xsl git flatpak libportal)
-checkdepends=(epiphany)
-checkdepends_x86_64=(gedit gvfs)
-_commit=5768e075090413f780b8905b0351bc5aa487b9f3
+checkdepends=(epiphany gedit gvfs)
+_commit=7dccf42892fdfcc9c3542cad3afdf45351edb63e  # tags/1.10.1^0
 source=("git+https://github.com/flatpak/xdg-desktop-portal#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -25,7 +24,6 @@ pkgver() {
 
 prepare() {
   cd $pkgname
-
   NOCONFIGURE=1 ./autogen.sh
 }
 
@@ -42,6 +40,7 @@ check() {
 
 package() {
   depends+=(xdg-desktop-portal-impl)
+
   cd $pkgname
   make DESTDIR="$pkgdir" install
 }
