--- a/go/go-tools/PKGBUILD
+++ b/go/go-tools/PKGBUILD
@@ -1,10 +1,10 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Maintainer: Morten Linderud <foxboron@archlinux.org>
+# Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 
 pkgname=go-tools
 epoch=4
-pkgver=0.1.5
+pkgver=0.1.7
 pkgrel=1
 pkgdesc='Developer tools for the Go programming language'
 arch=(x86_64 powerpc64le)
@@ -12,7 +12,7 @@ url='https://golang.org/'
 license=(BSD)
 depends=(glibc)
 makedepends=(git go)
-_commit=cd1d0887dc8cfcfb844340a5fce628c61da00a20
+_commit=0df0ca0f43117120bd7cc900ebf765f9b799438a
 source=(go-tools::git+https://go.googlesource.com/tools#commit=$_commit)
 md5sums=('SKIP')
 
