--- a/python/python-cheroot/PKGBUILD
+++ b/python/python-cheroot/PKGBUILD
@@ -7,7 +7,7 @@ _pkgbase="${pkgbase//python-/}"
 pkgname=('python-cheroot' 'python2-cheroot')
 pkgdesc="Highly-optimized, pure-python HTTP server"
 pkgver=8.5.2
-pkgrel=2
+pkgrel=3
 arch=('any')
 url="https://github.com/cherrypy/cheroot"
 license=('MIT')
@@ -16,9 +16,7 @@ makedepends=('python-six' 'python2-six' 'python-setuptools-scm'
   'python2-backports.unittest_mock' 'tree' 'python-tox' 'python2-tox'
   'python-jaraco' 'python2-jaraco' 'git')
 checkdepends=('python-pytest' 'python-pytest-xdist'
-              'python-requests' 'python-pyopenssl' 'python-trustme'
-              'python2-pytest' 'python2-pytest-xdist'
-              'python2-requests' 'python2-pyopenssl')
+              'python-requests' 'python-pyopenssl' 'python-trustme')
 source=("https://files.pythonhosted.org/packages/source/${_pkgbase:0:1}/${_pkgbase}/${_pkgbase}-${pkgver}.tar.gz"
         "LICENSE"
         "disable-broken-tests.patch")
@@ -62,9 +60,6 @@ check() {
 package_python-cheroot() {
   depends=('python-six' 'python-jaraco')
 
-  # for reproducible builds
-  export PYTHONHASHSEED=0
-
   cd "${srcdir}/${_pkgbase}-${pkgver}"
   python setup.py install --root="$pkgdir/" --optimize=1
 
@@ -79,9 +74,6 @@ package_python2-cheroot() {
   depends=('python2-six' 'python2-backports.functools_lru_cache'
            'python2-backports.unittest_mock' 'python2-selectors2'
            'python2-jaraco')
-
-  # for reproducible builds
-  export PYTHONHASHSEED=0
 
   cd "${srcdir}/${_pkgbase}-${pkgver}-py2"
   python2 setup.py install --root="$pkgdir/" --optimize=1
