--- a/python/python-scikit-learn/PKGBUILD
+++ b/python/python-scikit-learn/PKGBUILD
@@ -3,11 +3,11 @@
 # Maintainer: Caleb Maclennan <caleb@alerque.com>
 
 pkgname=python-scikit-learn
-pkgver=0.24.2
-pkgrel=2
+pkgver=1.0
+pkgrel=1
 pkgdesc="A set of python modules for machine learning and data mining"
 arch=(x86_64 powerpc64le powerpc)
-url="http://scikit-learn.sourceforge.net/"
+url='https://scikit-learn.org'
 license=('BSD')
 depends=('python-scipy' 'python-joblib' 'python-threadpoolctl')
 optdepends=('python-matplotlib: plotting capabilities')
@@ -16,7 +16,7 @@ makedepends_powerpc64le=('openmp')
 makedepends_x86_64=('openmp')
 options=(!emptydirs)
 source=("scikit-learn-${pkgver}.tar.gz::https://github.com/scikit-learn/scikit-learn/archive/${pkgver}.tar.gz")
-sha256sums=('642fb016bfe4bb7539ba6bf4e6dd5a95d2d25638387040b0f5eefdb84a840297')
+sha256sums=('fa478eaeb5dd92d0ac32f84e26b0de9dcfc52a64210887e4805a292927cc7102')
 
 build() {
   cd scikit-learn-$pkgver
@@ -25,7 +25,6 @@ build() {
 
 package() {
   cd scikit-learn-$pkgver
-  export PYTHONHASHSEED=0
   python setup.py install --root="$pkgdir" --optimize=1 --skip-build
 
   install -D COPYING "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
