--- a/python/sip/PKGBUILD
+++ b/python/sip/PKGBUILD
@@ -2,18 +2,17 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=sip
-pkgver=6.1.1
-pkgrel=1
+pkgver=6.2.0
+pkgrel=2
 arch=(x86_64 powerpc64le powerpc)
 pkgdesc='A tool that makes it easy to create Python bindings for C and C++ libraries'
 url='https://www.riverbankcomputing.com/software/sip/intro'
 license=('custom:"sip"')
-depends=(python-toml python-packaging)
-makedepends=(python-setuptools)
+depends=(python-toml python-packaging python-setuptools)
 conflicts=(sip5)
 replaces=(sip5)
 source=(https://pypi.python.org/packages/source/s/sip/$pkgname-$pkgver.tar.gz)
-sha256sums=('52d25af2fcd764c4e15cc9cd1350bdb0e63f52dfa2aa3c5e7679af7fde9f7e20')
+sha256sums=('34d2270b4ed8d7f8e55cc4ba821d718ee40d9bb2449c6b5cf8a10139d5c121ac')
 
 build() {
   cd $pkgname-$pkgver
