--- a/gtkmm/PKGBUILD
+++ b/gtkmm/PKGBUILD
@@ -9,7 +9,7 @@ pkgrel=4
 epoch=1
 pkgdesc="C++ bindings for GTK+ 2"
 url="http://www.gtkmm.org/"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 license=(LGPL)
 depends=(gtk2 pangomm atkmm)
 source=(https://ftp.gnome.org/pub/GNOME/sources/$pkgbase/2.24/$pkgbase-$pkgver.tar.xz)
