* update xclip to 0.13-3

--- a/xorg/xclip/PKGBUILD
+++ b/xorg/xclip/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.13
 pkgrel=3
 pkgdesc='Command line interface to the X11 clipboard'
 url='https://github.com/astrand/xclip'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
 depends=('libxmu')
 makedepends=('git')
