--- a/hiredis/PKGBUILD
+++ b/hiredis/PKGBUILD
@@ -1,18 +1,18 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Massimiliano Torromeo <massimiliano.torromeo@gmail.com>
+# Maintainer: Remi Gacogne <rgacogne@archlinux.org>
 # Contributor: Vladimir Tsanev <tsachev@gmail.com>
 
 pkgname=hiredis
-pkgver=1.0.0
+pkgver=1.0.2
 pkgrel=1
 pkgdesc='Minimalistic C client library for Redis'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/redis/hiredis/"
 license=('BSD')
 depends=('glibc')
 checkdepends=('redis')
 source=(https://github.com/redis/$pkgname/archive/v$pkgver/hiredis-$pkgver.tar.gz)
-sha256sums=('2a0b5fe5119ec973a0c1966bfc4bd7ed39dbce1cb6d749064af9121fe971936f')
+sha256sums=('e0ab696e2f07deb4252dda45b703d09854e53b9703c7d52182ce5a22616c3819')
 
 build() {
   cd $pkgname-$pkgver
