--- a/gupnp/PKGBUILD
+++ b/gupnp/PKGBUILD
@@ -3,8 +3,9 @@
 # Contributor: György Balló <ballogy@freestart.hu>
 
 pkgname=gupnp
-pkgver=1.2.7
+pkgver=1.4.0
 pkgrel=1
+epoch=1
 pkgdesc="An object-oriented UPNP framework"
 url="https://wiki.gnome.org/Projects/GUPnP"
 arch=(x86_64 powerpc64le powerpc)
@@ -12,7 +13,7 @@ license=(LGPL)
 depends=(glib2 gssdp util-linux libxml2)
 makedepends=(gobject-introspection gtk-doc vala meson git)
 optdepends=('python: gupnp-binding-tool')
-_commit=91f5c741ac9ff026df16111833719ce2e07ef11a  # tags/gupnp-1.2.7^0
+_commit=0175039d71cd72ee8c9b718e752d3fa81851359c  # tags/gupnp-1.4.0^0
 source=("git+https://gitlab.gnome.org/GNOME/gupnp.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -36,7 +37,7 @@ check() {
 
 package() {
   depends+=(libg{lib,object,io,module}-2.0.so libgssdp-1.2.so libsoup-2.4.so
-           libuuid.so)
+            libuuid.so)
   provides+=(libgupnp-1.2.so)
 
   meson install -C build --destdir "$pkgdir"
