--- a/qt6-base/PKGBUILD
+++ b/qt6-base/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-base
-_qtver=6.1.2
+_qtver=6.2.0
 pkgver=${_qtver/-/}
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
@@ -12,36 +12,38 @@ url='https://www.qt.io'
 license=(GPL3 LGPL3 FDL custom)
 pkgdesc='A cross-platform application and UI framework'
 depends=(libjpeg-turbo xcb-util-keysyms xcb-util-cursor libgl fontconfig xdg-utils
-         shared-mime-info xcb-util-wm libxrender libxi sqlite mesa
-         tslib libinput libxkbcommon-x11 libproxy libcups double-conversion brotli) # md4c - not supported yet
-makedepends=(cmake mariadb-libs unixodbc postgresql alsa-lib gst-plugins-base-libs
-             gtk3 libpulse cups freetds vulkan-headers xmlstarlet)
+         shared-mime-info xcb-util-wm libxrender libxi sqlite mesa vulkan-headers
+         tslib libinput libxkbcommon-x11 libproxy libcups double-conversion brotli md4c)
+makedepends=(cmake ninja mariadb-libs unixodbc postgresql alsa-lib gst-plugins-base-libs
+             gtk3 libpulse cups freetds xmlstarlet)
+depends_x86_64=(libb2)
+makedepends_x86_64=(libfbclient)
 optdepends=('postgresql-libs: PostgreSQL driver'
             'mariadb-libs: MariaDB driver'
             'unixodbc: ODBC driver'
-            'libfbclient: Firebird/iBase driver'
             'freetds: MS SQL driver'
             'gtk3: GTK platform plugin'
             'perl: for syncqt')
-depends_x86_64=(libb2)
-makedepends_x86_64=(libfbclient)
 optdepends_x86_64=('libfbclient: Firebird/iBase driver')
 groups=(qt6)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz
         qt6-base-cflags.patch
-        qt6-base-nostrip.patch)
-sha256sums=('b9c4061c1c7999c42c315fc5b0f4f654067b4186066dd729bbcf1bdce8d781c8'
+        qt6-base-nostrip.patch
+        qtbug-96392.patch::https://code.qt.io/cgit/qt/qtbase.git/patch/?id=5c7b3db32bf383afa00050370222f39e0f3083ca)
+sha256sums=('fdfff0716d093bcb6bcd53746ce1d3c9701a6bf3326d47813866d43949b47769'
             'cf707cd970650f8b60f8897692b36708ded9ba116723ec8fcd885576783fe85c'
-            '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094')
+            '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094'
+            '4c999415cf813591efa2e5bc5f692a4a7a822ad94837a01ef9c802f96c3ebd90')
 
 prepare() {
-  patch -d $_pkgfn -p1 -i ../qt6-base-cflags.patch # Use system CFLAGS
-  patch -d $_pkgfn -p1 -i ../qt6-base-nostrip.patch # Don't strip binaries with qmake
+  patch -d $_pkgfn -p1 < qt6-base-cflags.patch # Use system CFLAGS
+  patch -d $_pkgfn -p1 < qt6-base-nostrip.patch # Don't strip binaries with qmake
+  patch -d $_pkgfn -p1 < qtbug-96392.patch # https://bugreports.qt.io/browse/QTBUG-96392
 }
 
 build() {
-  cmake -B build -S $_pkgfn \
+  cmake -B build -S $_pkgfn -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
     -DINSTALL_BINDIR=lib/qt6/bin \
     -DINSTALL_PUBLICBINDIR=usr/bin \
