--- a/qt6/qt6-shadertools/PKGBUILD
+++ b/qt6/qt6-shadertools/PKGBUILD
@@ -4,22 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=qt6-shadertools
-_qtver=6.1.2
+_qtver=6.2.0
 pkgver=${_qtver/-/}
 pkgrel=1
 arch=(x86_64 powerpc64le powerpc)
 url='https://www.qt.io'
-license=(GPL3 LGPL3 FDL custom)
-pkgdesc='Experimental module providing APIs and a host tool to host tool to perform graphics and compute shader conditioning for the upcoming Qt graphics abstraction layer'
+license=(GPL3)
+pkgdesc='Provides functionality for the shader pipeline that allows Qt Quick to operate on Vulkan, Metal, and Direct3D, in addition to OpenGL'
 depends=(qt6-base)
-makedepends=(cmake vulkan-headers)
+makedepends=(cmake ninja)
 groups=(qt6)
 _pkgfn="${pkgname/6-/}-everywhere-src-$_qtver"
 source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/$_qtver/submodules/$_pkgfn.tar.xz)
-sha256sums=('e33c9af53d69a47a27b4be67f973d422cc7c7abd3f304a8b3e8a7ec6cd7298e1')
+sha256sums=('5f66d43610a3a6739fc360d836a2c045135107c0ecd40eb3ed18ce5f3dd79c42')
 
 build() {
-  cmake -B build -S $_pkgfn
+  cmake -B build -S $_pkgfn -G Ninja
   cmake --build build
 }
 
