--- a/kde/kdeplasma-addons/PKGBUILD
+++ b/kde/kdeplasma-addons/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdeplasma-addons
-pkgver=5.22.5
+pkgver=5.23.0
 pkgrel=1
 pkgdesc='All kind of addons to improve your Plasma experience'
 arch=(x86_64 powerpc64le powerpc)
@@ -14,15 +14,15 @@ depends=(plasma-workspace)
 makedepends=(extra-cmake-modules kross kunitconversion)
 makedepends_powerpc64le=(qt5-webengine)
 makedepends_x86_64=(qt5-webengine)
-optdepends=('kross: comic applet'
-            'purpose: Quickshare applet'
-            'quota-tools: disk quota applet'
-            'qt5-webengine: dictionary and webbrowser applets')
+optdepends=('purpose: Quickshare applet'
+            'quota-tools: disk quota applet')
+optdepends_powerpc64le=('qt5-webengine: dictionary and webbrowser applets')
+optdepends_x86_64=('qt5-webengine: dictionary and webbrowser applets')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('6240bb29e3e23374e193659b50b21ddf1448b3f5f88fb15094d029d6b1643103'
+sha256sums=('2f15f9e2c90f88f87377c0e7aff0b8645b02afcfb5518ef279865d60810f91b8'
             'SKIP')
-validpgpkeys=('2D1D5B0588357787DE9EE225EC94D18F7F05997E'  # Jonathan Riddell <jr@jriddell.org>
+validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
