--- a/kde/kwin/PKGBUILD
+++ b/kde/kwin/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kwin
-pkgver=5.22.5
-pkgrel=1
+pkgver=5.23.0
+pkgrel=2
 pkgdesc='An easy to use, but flexible, composited Window Manager'
 arch=(x86_64 powerpc64le powerpc)
 url='https://kde.org/plasma-desktop/'
@@ -16,18 +16,18 @@ makedepends=(extra-cmake-modules qt5-tools kdoctools krunner)
 optdepends=('maliit-keyboard: virtual keyboard for kwin-wayland')
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$pkgver/$pkgname-$pkgver.tar.xz{,.sig}
-        kwin-libglvnd-1.3.4.patch::https://invent.kde.org/plasma/kwin/-/commit/83971020.patch)
+        https://invent.kde.org/plasma/kwin/-/commit/85f8a533.patch)
 install=$pkgname.install
-sha256sums=('128daed41c1b9e65ddad3fe2ce3aea821ef54af520d3d39cde059b2c2bfcf5a3'
+sha256sums=('ba74f70648faa3c92c88e1b77916c6abd7fcad1af9e717a39dc9df278f1a551f'
             'SKIP'
-            '1fc24d7d5376c849c002bba57ed0b6efdae7ad978156f7623d27d8bce97c5131')
-validpgpkeys=('2D1D5B0588357787DE9EE225EC94D18F7F05997E'  # Jonathan Riddell <jr@jriddell.org>
+            '2c42a47dd1d62cde93d3d392d42056689d8fdbc24cd8497bd29adf113e16a7be')
+validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
               'D07BD8662C56CB291B316EB2F5675605C74E02CF'  # David Edmundson <davidedmundson@kde.org>
               '1FA881591C26B276D7A5518EEAAF29B42A678C20') # Marco Martin <notmart@gmail.com>
 
 prepare() {
-  patch -d $pkgname-$pkgver -p1 < kwin-libglvnd-1.3.4.patch # Fix build with libglvnd 1.3.4
+  patch -d $pkgname-$pkgver -p1 < 85f8a533.patch # Properly unredirect windows if compositing is not possible
 }
 
 build() {
