* update gdk-pixbuf2 to 2.42.6-2

--- a/gdk-pixbuf2/PKGBUILD
+++ b/gdk-pixbuf2/PKGBUILD
@@ -17,12 +17,15 @@ optdepends=(
   "libopenraw: Load .dng, .cr2, .crw, .nef, .orf, .pef, .arw, .erf, .mrw, and .raf"
   "libavif: Load .avif"
   "libheif: Load .heif, .heic, and .avif"
+  "libjxl: Load .jxl"
   "librsvg: Load .svg, .svgz, and .svg.gz"
   "webp-pixbuf-loader: Load .webp"
 )
 _commit=3afa395cd47fdde70216a8a8e4d71ac753e26ade  # tags/2.42.6^0
-source=("git+https://gitlab.gnome.org/GNOME/gdk-pixbuf.git#commit=$_commit"
-        gdk-pixbuf-query-loaders.hook)
+source=(
+  "git+https://gitlab.gnome.org/GNOME/gdk-pixbuf.git#commit=$_commit"
+  gdk-pixbuf-query-loaders.hook
+)
 sha256sums=('SKIP'
             '9fb71d95e6a212779eb0f88dde5a3cee0df7f4d9183f8f9ce286f8cdc14428f0')
 
@@ -51,7 +54,7 @@ package_gdk-pixbuf2() {
   provides=(libgdk_pixbuf-2.0.so)
   install=gdk-pixbuf2.install
 
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 
   mkdir -p doc/usr/share
   mv {"$pkgdir",doc}/usr/share/doc
