* update libquicktime to 1.2.4-25

--- a/libquicktime/PKGBUILD
+++ b/libquicktime/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=libquicktime
 pkgver=1.2.4
-pkgrel=24
+pkgrel=25
 pkgdesc="A library for reading and writing quicktime files"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 license=('LGPL2.1')
 url="http://libquicktime.sourceforge.net/"
 depends=('glib2' 'glibc' 'zlib')
