--- a/systemd/PKGBUILD
+++ b/systemd/PKGBUILD
@@ -5,8 +5,8 @@
 
 pkgbase=systemd
 pkgname=('systemd' 'systemd-libs' 'systemd-resolvconf' 'systemd-sysvcompat')
-_tag='91ea8d825553fc1ecfc19448be24a4da56b13d00' # git rev-parse v${_tag_name}
-_tag_name=249.4
+_tag='f1d37a5c491d85255e9996960dc2889a15022b78' # git rev-parse v${_tag_name}
+_tag_name=249.5
 pkgver="${_tag_name/-/}"
 pkgrel=2
 arch=(x86_64 powerpc64le powerpc)
@@ -66,10 +66,11 @@ sha512sums=('SKIP'
             '825b9dd0167c072ba62cabe0677e7cd20f2b4b850328022540f122689d8b25315005fa98ce867cf6e7460b2b26df16b88bb3b5c9ebf721746dce4e2271af7b97')
 
 _backports=(
-   # explicitly close FIDO2 devices
-  'b6aa89b0a399992c8ea762e6ec4f30cff90618f2'
-   # tpm-util: fix TPM parameter handling
-  'd2bf22fb8d8ad8a2c137f30ecd1fb49aaf50f57f'
+  # coredumpctl: stop truncating information about coredump
+  '473627e1c9fcdf8f819ced2bb79cb7e9ff598b0c'
+
+  # Revert "core: Check unit start rate limiting earlier"
+  '4fa9d8f14523982482386d398d2b2669902f2098'
 )
 
 _reverts=(
