--- a/hspell/PKGBUILD
+++ b/hspell/PKGBUILD
@@ -4,11 +4,12 @@
 pkgbase=hspell
 pkgname=('hspell' 'hunspell-he')
 pkgver=1.4
-pkgrel=3
-arch=( x86_64 powerpc64le powerpc )
+pkgrel=4
+arch=(x86_64 powerpc64le powerpc)
 license=('GPL')
 url="http://www.ivrix.org.il/projects/spell-checker/"
 makedepends=('glibc' 'zlib' 'perl' 'hunspell' 'gawk')
+makedepends_x86_64=('qt6-webengine')
 options=('!makeflags')
 source=(http://hspell.ivrix.org.il/${pkgname}-${pkgver}.tar.gz{,.sig})
 sha256sums=('7310f5d58740d21d6d215c1179658602ef7da97a816bc1497c8764be97aabea3'
@@ -32,7 +33,7 @@ package_hspell() {
   cd ${pkgname}-${pkgver}
   make DESTDIR="${pkgdir}" install
 
-  rm -f ${pkgdir}/usr/lib/libhspell.a
+  rm -f "${pkgdir}"/usr/lib/libhspell.a
 }
 
 package_hunspell-he() {
@@ -47,16 +48,19 @@ package_hunspell-he() {
 
   # the symlinks
   install -dm755 "$pkgdir"/usr/share/myspell/dicts
-  pushd $pkgdir/usr/share/myspell/dicts
-    for file in $pkgdir/usr/share/hunspell/*; do
+  pushd "$pkgdir"/usr/share/myspell/dicts
+    for file in "$pkgdir"/usr/share/hunspell/*; do
       ln -sv /usr/share/hunspell/$(basename $file) .
     done
   popd
 
-# Install webengine dictionaries
-  #install -d "$pkgdir"/usr/share/qt/qtwebengine_dictionaries/
-  #for _file in "$pkgdir"/usr/share/hunspell/*.dic; do
-  #_filename=$(basename $_file)
-    #qwebengine_convert_dict $_file "$pkgdir"/usr/share/qt/qtwebengine_dictionaries/${_filename/\.dic/\.bdic}
-  #done
+  if [ "${CARCH}" == 'x86_64' ]; then
+  # Install webengine dictionaries   
+    install -d "$pkgdir"/usr/share/qt{,6}/qtwebengine_dictionaries/
+    for _file in "$pkgdir"/usr/share/hunspell/*.dic; do
+      _filename=$(basename $_file)
+      /usr/lib/qt6/qwebengine_convert_dict $_file "$pkgdir"/usr/share/qt6/qtwebengine_dictionaries/${_filename/\.dic/\.bdic}
+      ln -rs "$pkgdir"/usr/share/qt6/qtwebengine_dictionaries/${_filename/\.dic/\.bdic} "$pkgdir"/usr/share/qt/qtwebengine_dictionaries/
+    done
+  fi
 }
