--- a/netcdf-cxx/PKGBUILD
+++ b/netcdf-cxx/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=netcdf-cxx
 pkgver=4.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc="NetCDF C++ bindings"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://github.com/Unidata/netcdf-cxx4/"
 license=(custom)
 depends=(gcc-libs netcdf curl)
@@ -24,6 +24,7 @@ prepare() {
 
 build() {
     cd ${pkgname}4-${pkgver}
+    export CXXFLAGS="${CXXFLAGS} -lnetcdf"
     ./configure \
         --prefix=/usr \
         --enable-shared \
