--- a/gdal/PKGBUILD
+++ b/gdal/PKGBUILD
@@ -6,7 +6,7 @@
 pkgbase=gdal
 pkgname=('gdal' 'python-gdal')
 pkgver=3.3.1
-pkgrel=4
+pkgrel=8
 pkgdesc="A translator library for raster geospatial data formats"
 arch=(x86_64 powerpc64le powerpc)
 url="https://gdal.org/"
@@ -20,8 +20,10 @@ optdepends=('postgresql: postgresql database support'
 options=('!emptydirs')
 changelog=$pkgbase.changelog
 source=(https://download.osgeo.org/${pkgbase}/${pkgver}/${pkgbase}-${pkgver}.tar.xz
+        poppler-21.10.0.patch
         gdal-perl-vendor.patch)
 sha256sums=('48ab00b77d49f08cf66c60ccce55abb6455c3079f545e60c90ee7ce857bccb70'
+            '3074318889631fa9a9f351feccedb4d7a368b56017cc3660276c7aac154af6de'
             '2103b98f2f15954f042d5620658b30d703125927bde2e5eb671c5facb6c2f5ed')
 
 prepare() {
@@ -29,6 +31,9 @@ prepare() {
 
 # Fix mandir
   sed -i "s|^mandir=.*|mandir='\${prefix}/share/man'|" configure
+
+# Fix build with poppler 21.10.0
+  patch -Np2 -i "${srcdir}"/poppler-21.10.0.patch
 
 # Fix Perl bindings installation path
   patch -Np0 -i "${srcdir}"/gdal-perl-vendor.patch
