--- a/webkit2gtk/PKGBUILD
+++ b/webkit2gtk/PKGBUILD
@@ -22,21 +22,14 @@ optdepends=('geoclue: Geolocation support'
             'gst-plugins-good: media decoding'
             'gst-plugins-bad: media decoding'
             'gst-libav: nonfree media decoding')
-source=($url/releases/webkitgtk-$pkgver.tar.xz{,.asc}
-        be-typedarray.patch
-        no-color.patch)
+source=($url/releases/webkitgtk-$pkgver.tar.xz{,.asc})
 sha256sums=('443c1316705de024741748e85fe32324d299d9ee68e6feb340b89e4a04073dee'
             'SKIP'
-            'a72c41afe9b66f15791c60c76afbea823fd41bfab9d5bcc5f5378e913aba03ff'
-            'e1868de08b7f5b261186146b2bd4d9c2a69e2fee2d4fb9f01e10fc3d53ef9d39')
 validpgpkeys=('D7FCF61CF9A2DEAB31D81BD3F3D322D0EC4582C3'  # Carlos Garcia Campos <cgarcia@igalia.com>
               '5AA3BC334FD7E3369E7C77B291C559DBE4C9123B') # Adrián Pérez de Castro <aperez@igalia.com>
 
 prepare() {
   cd webkitgtk-$pkgver
-
-  #patch -Np0 -i ${srcdir}/be-typedarray.patch
-  #patch -Np0 -i ${srcdir}/no-color.patch
 
   sed -i -e '/foreach my.*(keys/s/(keys/(sort keys/' \
             Source/WebCore/bindings/scripts/CodeGenerator.pm \
@@ -59,7 +52,6 @@ build() {
       EXTRA_CMAKE_FLAGS="-DENABLE_JIT=OFF
                          -DUSE_SYSTEMD=OFF
                          -DPORT=GTK -DUSE_LD_GOLD=OFF
-                         -DFORCE_32BIT=ON
                          -DUSE_SYSTEM_MALLOC=ON
                          -DCMAKE_CXX_FLAGS_RELEASE=-DNDEBUG
                          -DCMAKE_CXX_FLAGS_DEBUG=-DNDEBUG
@@ -81,9 +73,9 @@ build() {
     -DCMAKE_INSTALL_LIBEXECDIR=lib \
     -DCMAKE_SKIP_RPATH=ON \
     -DENABLE_GTKDOC=ON \
-    -DENABLE_MINIBROWSER=ON ${EXTRA_CMAKE_FLAGS} \
+    -DENABLE_MINIBROWSER=ON \
     -DENABLE_BUBBLEWRAP_SANDBOX=ON \
-    -DUSE_SOUP2=ON
+    -DUSE_SOUP2=ON ${EXTRA_CMAKE_FLAGS}
   cmake --build build ${MAKEFLAGS}
 }
 
