--- a/xorg/luit/PKGBUILD
+++ b/xorg/luit/PKGBUILD
@@ -1,11 +1,12 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
+# Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=luit
-pkgver=20201003
+pkgver=20210218
 pkgrel=1
 pkgdesc="Filter that can be run between an arbitrary application and a UTF-8 terminal emulator"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://invisible-island.net/luit/luit.html"
 license=('custom')
 depends=('libfontenc')
@@ -13,7 +14,7 @@ makedepends=('libx11')
 replaces=('xorg-luit')
 conflicts=('xorg-luit')
 source=(https://invisible-mirror.net/archives/${pkgname}/${pkgname}-${pkgver}.tgz{,.asc})
-sha256sums=('c948da3c8b163e8e8f23cbe1255e7f3fa234c48aaf470b201ce55a3ecb4ad985'
+sha256sums=('f3c7cfea61f4175b087fd4200e8e43d2d4b87575ed265403f9d67850ea1740e6'
             'SKIP')
 validpgpkeys=('C52048C0C0748FEE227D47A2702353E0F7E48EDB') # "Thomas Dickey <dickey@invisible-island.net>"
 
