--- a/compiler-rt/PKGBUILD
+++ b/compiler-rt/PKGBUILD
@@ -3,11 +3,11 @@
 # Contributor: Jan "heftig" Steffens <jan.steffens@gmail.com>
 
 pkgname=compiler-rt
-pkgver=12.0.1
+pkgver=13.0.0
 pkgrel=1
 pkgdesc="Compiler runtime libraries for clang"
 arch=(x86_64 powerpc64le)
-mrl="https://compiler-rt.llvm.org/"
+url="https://compiler-rt.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 depends=('gcc-libs')
 makedepends=('llvm' 'cmake' 'ninja' 'python')
@@ -15,19 +15,15 @@ makedepends=('llvm' 'cmake' 'ninja' 'python')
 makedepends_x86_64=('lib32-gcc-libs')
 options=('staticlibs')
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
-source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
-        compiler-rt-size_t.patch)
-sha256sums=('b4c8d5f2a802332987c1c0a95b5afb35b1a66a96fe44add4e4ed4792c4cba0a4'
-            'SKIP'
-            '910b54988519be80492b9f3531303a5dd206f8c4401e7e7845cc2bb090134a5a')
+source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig})
+sha256sums=('4c3602d76c7868a96b30c36165c4b7643e2a20173fced7e071b4baeb2d74db3f'
+            'SKIP')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
 prepare() {
   cd "$srcdir/$pkgname-$pkgver.src"
   mkdir build
-
-  patch -Np1 -i ${srcdir}/compiler-rt-size_t.patch
 }
 
 build() {
