* update linux-ppc64 to 5.14.16.arch1-1

--- a/linux-ppc64/config
+++ b/linux-ppc64/config
@@ -1,10 +1,10 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.14.6-arch1 Kernel Configuration
+# Linux/powerpc 5.14.16-arch1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="powerpc64-linux-gnu-gcc (GCC) 11.1.0"
+CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.2.0"
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=110100
+CONFIG_GCC_VERSION=110200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
 CONFIG_AS_VERSION=23700
@@ -2590,10 +2590,10 @@ CONFIG_ADB_PMU_LED_DISK=y
 CONFIG_PMAC_SMU=y
 CONFIG_MAC_EMUMOUSEBTN=m
 CONFIG_WINDFARM=m
-# CONFIG_WINDFARM_PM81 is not set
-# CONFIG_WINDFARM_PM72 is not set
-# CONFIG_WINDFARM_RM31 is not set
-# CONFIG_WINDFARM_PM91 is not set
+CONFIG_WINDFARM_PM81=m
+CONFIG_WINDFARM_PM72=m
+CONFIG_WINDFARM_RM31=m
+CONFIG_WINDFARM_PM91=m
 CONFIG_WINDFARM_PM112=m
 CONFIG_WINDFARM_PM121=m
 CONFIG_PMAC_RACKMETER=m
@@ -5994,7 +5994,7 @@ CONFIG_FB_IBM_GXT4500=m
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_MB862XX is not set
-CONFIG_FB_SIMPLE=y
+CONFIG_FB_SIMPLE=m
 CONFIG_FB_SSD1307=m
 CONFIG_FB_SM712=m
 # end of Frame buffer Devices
@@ -6642,7 +6642,7 @@ CONFIG_I2C_HID_CORE=m
 
 CONFIG_USB_OHCI_LITTLE_ENDIAN=y
 CONFIG_USB_SUPPORT=y
-CONFIG_USB_COMMON=y
+CONFIG_USB_COMMON=m
 CONFIG_USB_LED_TRIG=y
 CONFIG_USB_ULPI_BUS=m
 CONFIG_USB_CONN_GPIO=m
