* update rust to 1:1.56.1-1

--- a/rust/PKGBUILD
+++ b/rust/PKGBUILD
@@ -7,15 +7,14 @@
 
 pkgname=('rust' 'rust-docs')
 epoch=1
-pkgver=1.55.0
+pkgver=1.56.1
 pkgrel=1
 
-_llvm_ver=12.0.1
-_bootstrap_ver=1.53.0
+_llvm_ver=13.0.0
 
 pkgdesc='Systems programming language focused on safety, speed and concurrency'
 url='https://www.rust-lang.org/'
-arch=(powerpc64le powerpc)
+arch=(powerpc) #64le powerpc)
 license=('MIT' 'Apache')
 
 makedepends=("llvm=$_llvm_ver" 'libffi' 'perl' 'python'
@@ -36,11 +35,10 @@ source=(
   0007-test-sysroot-crates-are-unstable-Fix-test-when-rpath.patch
   0009-Link-stage2-tools-dynamically-to-libstd.patch
   0016-do-not-copy-libunwind.patch
-  fix-ppc32.patch
 )
-sha256sums=('b2379ac710f5f876ee3c3e03122fe33098d6765d371cac6c31b1b6fc8e43821e'
+sha256sums=('c3898dfaadaa193dc88ddbc5345946a163211b58621df1cfff70186b4fc79511'
             'SKIP'
-            'b4c8d5f2a802332987c1c0a95b5afb35b1a66a96fe44add4e4ed4792c4cba0a4'
+            '4c3602d76c7868a96b30c36165c4b7643e2a20173fced7e071b4baeb2d74db3f'
             'SKIP'
             '35c9cd0d2a220c020f949c231d296bf4a1641ad253485e2f64440a6dc7731082'
             '1833c3b5f8262b598115d13f08e2dcba792536768a2371869870e26244971112'
@@ -48,15 +46,14 @@ sha256sums=('b2379ac710f5f876ee3c3e03122fe33098d6765d371cac6c31b1b6fc8e43821e'
             '37dd40c028f4f3f79f8ecc7357023f2cf555ad6cfbd9a55c9f1ef61589144acd'
             '95ca814677947e87344b0890fd0d323f8dba567fa390219b92debdca71f14ff2'
             '0883036789d8f8523de8896f9eed5c50d714c67ccbefddb46de0a80be76f3c39'
-            'c2394b6ee55374fce587ec03c3ffc5bd684aa67194b1bed4c34a162245b535f4'
-            '7d0ca701816f4c02fa245a173b5330140089344a06ecf11f9516422008346f65')
+            'c2394b6ee55374fce587ec03c3ffc5bd684aa67194b1bed4c34a162245b535f4')
 validpgpkeys=('108F66205EAEB0AAA8DD5E1C85AB96E6FA1BE5FE'  # Rust Language (Tag and Release Signing Key) <rust-key@rust-lang.org>
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard <tstellar@redhat.com>
               'B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 
 prepare() {
   cd "rustc-$pkgver-src"
-  
+
   # Patch bootstrap and cargo so credential helpers
   # are in /usr/lib instead of /usr/libexec
   patch -Np1 -i ../0001-bootstrap-Change-libexec-dir.patch
@@ -71,7 +68,6 @@ prepare() {
   BOOTSTRAP_PATH="/usr/bin"
   case "${CARCH}" in
     powerpc) 
-      patch -Np1 -i ../fix-ppc32.patch
       BUILD_TOOLS='"cargo", "clippy", "rustfmt", "analysis", "src", "rust-demangler"'
     ;;
     *)
