* update librsvg to 2:2.52.4-1

--- a/librsvg/PKGBUILD
+++ b/librsvg/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Jan de Groot <jgc@archlinux.org>
 
 pkgname=librsvg
-pkgver=2.50.7
+pkgver=2.52.4
 pkgrel=1
 epoch=2
 pkgdesc="SVG rendering library"
@@ -13,7 +13,7 @@ license=(LGPL)
 depends=(gdk-pixbuf2 pango)
 makedepends=(gobject-introspection vala gtk-doc git rust)
 provides=(librsvg-${pkgver%%.*}.so)
-_commit=6ca387974e6a3e248c261d3dac15b8d4a742d3aa  # tags/2.50.7^0
+_commit=2f6f58ef7edda386badf24d2beac153f0195723a  # tags/2.52.4^0
 source=("git+https://gitlab.gnome.org/GNOME/librsvg.git#commit=$_commit")
 sha256sums=('SKIP')
 
@@ -27,12 +27,11 @@ prepare() {
   NOCONFIGURE=1 ./autogen.sh
 }
 
+# Use LTO
+export CARGO_PROFILE_RELEASE_LTO=true CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
+
 build() {
   cd librsvg
-
-  # Use LTO
-  export CARGO_PROFILE_RELEASE_LTO=true CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
-
   ./configure --prefix=/usr --disable-static --enable-vala \
     --enable-gtk-doc
   sed -i -e 's/ -shared / -Wl,-O1,--as-needed\0 /g' libtool
@@ -51,4 +50,4 @@ package() {
   make DESTDIR="$pkgdir" install
 }
 
-# vim: ts=2 sw=2 et:
+# vim:set sw=2 et:
