* add gupnp to riscv64

--- a/gupnp/PKGBUILD
+++ b/gupnp/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=1
 epoch=1
 pkgdesc="An object-oriented UPNP framework"
 url="https://wiki.gnome.org/Projects/GUPnP"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(glib2 gssdp util-linux libxml2)
 makedepends=(gobject-introspection gtk-doc vala meson git)
