* add $(basename `pwd`) for riscv64

--- a/gupnp-igd/PKGBUILD
+++ b/gupnp-igd/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.0
 pkgrel=1.1
 pkgdesc="A library to handle UPnP IGD port mapping"
 url="https://wiki.gnome.org/Projects/GUPnP"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(gupnp)
 makedepends=(gobject-introspection git gtk-doc meson)
