--- a/libnice/PKGBUILD
+++ b/libnice/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.1.18
 pkgrel=2
 pkgdesc="An implementation of the IETF's draft ICE (for p2p UDP data streams)"
 url="https://nice.freedesktop.org"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(glib2 gnutls gupnp-igd)
 makedepends=(gstreamer gtk-doc git meson gobject-introspection graphviz)
