* add libuninameslist for riscv64

--- a/libuninameslist/PKGBUILD
+++ b/libuninameslist/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=2
 pkgdesc='Large, sparse array mapping each unicode code point to the annotation data for it'
 url='https://github.com/fontforge/libuninameslist'
 license=('custom')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
 source=("https://github.com/fontforge/${pkgname}/releases/download/${pkgver}/${pkgname}-dist-${pkgver}.tar.gz")
 sha256sums=('5c0283b2e18d101e58b70a026119d66c9d3e749e4537def7799bba0bc8998f62')
 
