* add /home/kth5/code/archpower/fontforge for riscv64

--- a/fontforge/PKGBUILD
+++ b/fontforge/PKGBUILD
@@ -8,8 +8,7 @@ pkgver=20201107
 pkgrel=1
 pkgdesc='Outline and bitmap font editor'
 url='https://fontforge.github.io/'
-#arch=(x86_64 powerpc64le powerpc riscv64)
-arch=(riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD')
 makedepends=('cmake' 'git' 'python-sphinx')
 depends=('libtool' 'pango' 'giflib' 'libtiff' 'libxml2' 'libspiro' 'python'
