* add /home/kth5/code/archpower/lilypond for riscv64

--- a/lilypond/PKGBUILD
+++ b/lilypond/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=lilypond
 pkgver=2.22.1
 pkgrel=2
 pkgdesc="Music engraving program, devoted to producing the highest-quality sheet music possible"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://lilypond.org"
 license=('FDL1.3' 'GPL3' 'custom:OFL')
 groups=('pro-audio')
