* add /home/kth5/code/archpower/pacman for riscv64 & streamline .conf

--- a/pacman/PKGBUILD
+++ b/pacman/PKGBUILD
@@ -1,17 +1,17 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # vim: set ts=2 sw=2 et:
-# Maintainer:
+# Maintainer: 
 
 pkgname=pacman
 pkgver=6.0.1
-pkgrel=1
+pkgrel=3
 pkgdesc="A library-based package manager with dependency support"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.archlinux.org/pacman/"
 license=('GPL')
 groups=('base-devel')
-depends=('bash' 'glibc' 'libarchive' 'curl' 'gpgme' 'archpower-keyring' 'brotli')
-makedepends=('meson' 'asciidoc')
+depends=('bash' 'glibc' 'libarchive' 'curl' 'gpgme' 'archpower-keyring')
+makedepends=('meson' 'asciidoc' 'doxygen')
 checkdepends=('python' 'fakechroot')
 optdepends=('perl-locale-gettext: translation support in makepkg-template')
 provides=('libalpm.so')
@@ -21,17 +21,17 @@ options=('strip' 'debug')
 validpgpkeys=('6645B0A8C7005E78DB1D7864F99FFE0FEAE999BD'  # Allan McRae <allan@archlinux.org>
               'B8151B117037781095514CA7BBDFFC92306B1121') # Andrew Gregory (pacman) <andrew@archlinux.org>
 source=(https://sources.archlinux.org/other/pacman/$pkgname-$pkgver.tar.xz{,.sig}
+        add-flto-to-LDFLAGS-for-clang.patch
         pacman.conf
-        pacman.conf.ppc32
         makepkg.conf)
 sha256sums=('0db61456e56aa49e260e891c0b025be210319e62b15521f29d3e93b00d3bf731'
             'SKIP'
-            '81bf2288212917533671d4056aec9126d48a212af8ec0ebe73c5169a5ffdad68'
-            '52d89af5dab145bc505f39176395f5aecc345fe9246718e56b2dd9a7b8ddde0b'
-            '196139a68b36e1511684373f05e8d58ee88643e092c1ec735616b2de329e6546')
-
+            '82ff91b85f4c6ceba19f9330437e2a22aabc966c2b9e2a20a53857f98a42c223'
+            '1b9e59efc8163062f7e33fc3442df0e2b9ab3676dd8e0d2b524385cc79e7bbb5'
+            '8207d01a05a683cef3eb16992de9c9561e6539bcb5bbf40d2e62bfa5ba6c118d')
 prepare() {
   cd "$pkgname-$pkgver"
+  patch -Np1 -i ../add-flto-to-LDFLAGS-for-clang.patch
 }
 
 build() {
@@ -40,7 +40,7 @@ build() {
   meson --prefix=/usr \
         --buildtype=plain \
         -Ddoc=enabled \
-        -Ddoxygen=disabled \
+        -Ddoxygen=enabled \
         -Dscriptlet-shell=/usr/bin/bash \
         -Dldconfig=/usr/bin/ldconfig \
         build
@@ -59,7 +59,6 @@ package() {
 
   DESTDIR="$pkgdir" meson install -C build
 
-
   sed "s@^Architecture.*@Architecture = ${CARCH}@g" -i "$srcdir/pacman.conf"
   sed "s@%ARCH%@${CARCH}@g" -i "$srcdir/makepkg.conf"
 
@@ -67,19 +66,19 @@ package() {
     powerpc64le)
       _CFLAGS="-O3 -pipe -mcpu=power8 -mabi=altivec -maltivec"
       ;;
+    riscv64)
+      _CFLAGS="-O2 -pipe"
+      ;;
     *)
       _CFLAGS="-O3 -pipe"
       ;;
   esac
   sed "s@%CFLAGS%@${_CFLAGS}@g" -i "$srcdir/makepkg.conf"
-
-  case "${CARCH}" in
-    powerpc) PACMAN_CONF="pacman.conf.ppc32" ;;
-    *)       PACMAN_CONF="pacman.conf" ;;
-  esac
+  sed "s@%CARCH%@${CARCH}@g" -i "$srcdir/makepkg.conf"
+  sed "s@%CHOST%@${CHOST}@g" -i "$srcdir/makepkg.conf"
 
   # install Arch specific stuff
   install -dm755 "$pkgdir/etc"
-  install -m644 "$srcdir/${PACMAN_CONF}" "$pkgdir/etc/pacman.conf"
+  install -m644 "$srcdir/pacman.conf" "$pkgdir/etc"
   install -m644 "$srcdir/makepkg.conf" "$pkgdir/etc"
 }
