--- a/pacman/pacman.conf
+++ b/pacman/pacman.conf
@@ -19,7 +19,7 @@ HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -L -C - -f -o %o %u
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
-Architecture = powerpc64le
+Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
@@ -69,11 +69,17 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
+#[testing-any]
+#Server = https://repo.archlinuxpower.org/testing/any
+
 #[testing]
-#Server = https://archlinuxpower.org/testing
+#Server = https://repo.archlinuxpower.org/testing/$arch
+
+[base-any]
+Server = https://repo.archlinuxpower.org/base/any
 
 [base]
-Server = https://archlinuxpower.org/base
+Server = https://repo.archlinuxpower.org/base/$arch
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
