* add /home/kth5/code/archpower/fuse3 for riscv64

--- a/fuse3/PKGBUILD
+++ b/fuse3/PKGBUILD
@@ -7,7 +7,7 @@ pkgbase=fuse3
 pkgname=(fuse-common fuse3)
 pkgver=3.10.5
 pkgrel=1
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/libfuse/libfuse'
 license=('GPL2')
 makedepends=('pkg-config' 'meson' 'udev')
