* add /home/kth5/code/archpower/fuse2 for riscv64

--- a/fuse2/PKGBUILD
+++ b/fuse2/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=fuse2
 pkgver=2.9.9
-pkgrel=4
+pkgrel=4.1
 pkgdesc="A library that makes it possible to implement a filesystem in a userspace program."
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/libfuse/libfuse'
 license=('GPL2')
 provides=(fuse=$pkgver) # TODO: remove it once all packages start to use 'fuse2' name
@@ -16,10 +16,23 @@ conflicts=('fuse')
 depends=('glibc' 'fuse-common')
 makedepends=('pkg-config')
 options=(!emptydirs)
-source=(https://github.com/libfuse/libfuse/releases/download/fuse-$pkgver/fuse-$pkgver.tar.gz{,.asc})
+source=(https://github.com/libfuse/libfuse/releases/download/fuse-$pkgver/fuse-$pkgver.tar.gz{,.asc}
+	fuse-2.9.3-kernel-types.patch
+        fuse-2.9.9-avoid-calling-umount.patch
+        fuse-2.9.9-closefrom-glibc-2-34.patch)
 sha1sums=('943ba651b14bc4a3c6fd959ed4b8c04f4a59032d'
-          'SKIP')
+          'SKIP'
+          '7f3ce0b4fd5ecd49112e6473e685d107e4729368'
+          '5608d885bd5e66fc1e12b847d078296309afd566'
+          '94f49e0e512fc1a5b319c3df3ed37142aeb9cb19')
 validpgpkeys=(ED31791B2C5C1613AF388B8AD113FCAC3C4E599F) # Nikolaus Rath <Nikolaus@rath.org>
+
+prepare() {
+  cd fuse-$pkgver
+  patch -Np1 -i ${srcdir}/fuse-2.9.3-kernel-types.patch
+  patch -Np1 -i ${srcdir}/fuse-2.9.9-avoid-calling-umount.patch
+  patch -Np1 -i ${srcdir}/fuse-2.9.9-closefrom-glibc-2-34.patch
+}
 
 build() {
   cd fuse-$pkgver
