* update libcap-ng to 0.8.2-6

--- a/libcap-ng/PKGBUILD
+++ b/libcap-ng/PKGBUILD
@@ -7,13 +7,13 @@
 pkgbase=libcap-ng
 pkgname=(libcap-ng python-capng)
 pkgver=0.8.2
-pkgrel=3
+pkgrel=6
 pkgdesc='A library for Linux that makes using posix capabilities easy'
 url='https://people.redhat.com/sgrubb/libcap-ng/'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL2.1')
 depends=('glibc')
-#makedepends=('python' 'swig')
+makedepends=('python' 'swig')
 source=(https://github.com/stevegrubb/libcap-ng/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz)
 sha512sums=('33832ee16972050a7c5cb20de21d766d5e88f5357db28166b83b05369f7ceea0b1aded39bae2d746d582ad4ee7703c131876fc4bcbc5d4b4eadd7dd429e8cf10')
 b2sums=('6bb07503421f88803ce2597289c18762f6ad06a3535ad7c6ffc28d2519adf2a130189332e56df174aa9be768340983ea6f7a6046b2209916815a19a0c6fa3693')
