* update pam to 1.5.2-1.1

--- a/pam/PKGBUILD
+++ b/pam/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=pam
 pkgver=1.5.2
-pkgrel=1
+pkgrel=1.1
 pkgdesc="PAM (Pluggable Authentication Modules) library"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
@@ -32,7 +32,8 @@ build() {
   ./configure \
     --libdir=/usr/lib \
     --sbindir=/usr/bin \
-    --disable-db
+    --disable-db \
+    --disable-nis
   make
 }
 
@@ -46,7 +47,7 @@ package() {
 
   # remove doc which is not used anymore
   # FS #40749
-  #rm "$pkgdir"/usr/share/doc/Linux-PAM/sag-pam_userdb.html
+  rm -f "$pkgdir"/usr/share/doc/Linux-PAM/sag-pam_userdb.html
 }
 
 # vim: ts=2 sw=2 et:
