* update nss to 3.74-1

--- a/nss/PKGBUILD
+++ b/nss/PKGBUILD
@@ -4,25 +4,29 @@
 
 pkgbase=nss
 pkgname=(nss ca-certificates-mozilla)
-pkgver=3.72
+pkgver=3.74
 pkgrel=1
 pkgdesc="Network Security Services"
 url="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/NSS"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(MPL GPL)
 depends=(nspr sqlite zlib sh 'p11-kit>=0.23.19')
-makedepends=(perl python gyp)
-source=("https://ftp.mozilla.org/pub/security/nss/releases/NSS_${pkgver//./_}_RTM/src/nss-${pkgver}.tar.gz"
+makedepends=(perl python gyp mercurial)
+_revision=83d13f65aff55bba36016fbe81095d02e006dd1f
+source=("hg+https://hg.mozilla.org/projects/nss#revision=$_revision"
         certdata2pem.py bundle.sh)
-sha256sums=('6ea60a9ff113e493ea2ab25f41ea75a9fbd10af7903f26f703dac8680732d02e'
+sha256sums=('SKIP'
             'd2a1579dae05fd16175fac27ef08b54731ecefdf414085c610179afcf62b096c'
             '3bfadf722da6773bdabdd25bdf78158648043d1b7e57615574f189a88ca865dd')
-prepare() {
-  cd nss-$pkgver/nss
 
-  rm -rf "$srcdir/certs"
-  mkdir "$srcdir/certs"
-  ln -srt "$srcdir/certs" lib/ckfw/builtins/{certdata.txt,nssckbi.h}
+pkgver() {
+  cd nss
+  hg id -t | sed 's/^NSS_//;s/_RTM$//;s/_/./g'
+}
+
+prepare() {
+  mkdir -p certs
+  ln -srft certs nss/lib/ckfw/builtins/{certdata.txt,nssckbi.h}
 }
 
 build() {
@@ -39,20 +43,20 @@ build() {
     *) TARGET="x64" ;;
   esac
 
-  cd nss-$pkgver/nss
+  cd nss
   ./build.sh \
     --target ${TARGET} \
     --opt \
     --system-sqlite \
     --system-nspr \
     --enable-libpkix \
-    --disable-tests || true
+    --disable-tests
 }
 
 package_nss() {
-  cd nss-$pkgver
+  local nsprver="$(pkg-config --modversion nspr)"
+  local libdir=/usr/lib
 
-  local libdir=/usr/lib nsprver="$(pkg-config --modversion nspr)"
   sed nss/pkg/pkg-config/nss.pc.in \
     -e "s,%libdir%,$libdir,g" \
     -e "s,%prefix%,/usr,g" \
