* update xorg-setxkbmap to 1.3.2-2

--- a/xorg/xorg-setxkbmap/PKGBUILD
+++ b/xorg/xorg-setxkbmap/PKGBUILD
@@ -8,7 +8,8 @@ pkgrel=2
 pkgdesc='Set the keyboard using the X Keyboard Extension'
 url='https://xorg.freedesktop.org/'
 license=('custom')
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 depends=('libxkbfile')
 makedepends=('xorg-util-macros')
 source=(${url}/releases/individual/app/setxkbmap-${pkgver}.tar.bz2{,.sig})
