* update xf86-input-libinput to 1.2.0-1

--- a/xorg/xf86-input-libinput/PKGBUILD
+++ b/xorg/xf86-input-libinput/PKGBUILD
@@ -5,7 +5,8 @@ pkgname=xf86-input-libinput
 pkgver=1.2.0
 pkgrel=1
 pkgdesc="Generic input driver for the X.Org server based on libinput"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 license=('custom:MIT')
 url="http://xorg.freedesktop.org/"
 depends=('libinput')
