* update xorg-server to 1.20.13-2.1

--- a/xorg/xorg-server/PKGBUILD
+++ b/xorg/xorg-server/PKGBUILD
@@ -6,8 +6,9 @@ pkgbase=xorg-server
 pkgname=('xorg-server' 'xorg-server-xephyr' 'xorg-server-xvfb' 'xorg-server-xnest'
          'xorg-server-common' 'xorg-server-devel')
 pkgver=1.20.13
-pkgrel=2
+pkgrel=2.1
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 license=('custom')
 groups=('xorg')
 url="https://xorg.freedesktop.org"
