* update xf86-input-synaptics to 1.9.1-2

--- a/xorg/xf86-input-synaptics/PKGBUILD
+++ b/xorg/xf86-input-synaptics/PKGBUILD
@@ -8,7 +8,8 @@ pkgname=xf86-input-synaptics
 pkgver=1.9.1
 pkgrel=2
 pkgdesc="Synaptics driver for notebook touchpads"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 license=('MIT')
 url="https://xorg.freedesktop.org/"
 depends=('libxtst' 'libevdev')
