* add xterm for riscv64

--- a/xorg/xterm/PKGBUILD
+++ b/xorg/xterm/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=xterm
 pkgver=369
 pkgrel=1
 pkgdesc="X Terminal Emulator"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://invisible-island.net/xterm/"
 license=('custom')
 depends=('libxft' 'libxaw' 'ncurses' 'luit' 'xbitmaps' 'libutempter' 'libxkbfile')
