* update git to 2.34.1-1

--- a/git/PKGBUILD
+++ b/git/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=git
-pkgver=2.34.0
+pkgver=2.34.1
 pkgrel=1
 pkgdesc='the fast distributed version control system'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -11,7 +11,7 @@ url='https://git-scm.com/'
 license=('GPL2')
 depends=('curl' 'expat' 'perl' 'perl-error' 'perl-mailtools'
          'openssl' 'pcre2' 'grep' 'shadow' 'zlib')
-makedepends=('python' 'xmlto' 'asciidoc')
+makedepends=('python' 'libgnome-keyring' 'xmlto' 'asciidoc')
 optdepends=('tk: gitk and git gui'
             'perl-libwww: git svn'
             'perl-term-readkey: git svn and interactive.singlekey setting'
@@ -31,7 +31,7 @@ source=("https://www.kernel.org/pub/software/scm/git/git-$pkgver.tar."{xz,sign}
         'git-daemon@.service'
         'git-daemon.socket'
         'git-sysusers.conf')
-sha256sums=('fd6cb9b26665794c61f9ca917dcf00e7c19b0c02be575ad6ba9354fa6962411f'
+sha256sums=('3a0755dd1cfab71a24dd96df3498c29cd0acd13b04f3d08bf933e81286db802c'
             'SKIP'
             '14c0b67cfe116b430645c19d8c4759419657e6809dfa28f438c33a005245ad91'
             'ac4c90d62c44926e6d30d18d97767efc901076d4e0283ed812a349aece72f203'
@@ -60,8 +60,8 @@ build() {
     "${_make_options[@]}" \
     all man
 
-  #make -C contrib/credential/gnome-keyring
-  #make -C contrib/credential/libsecret
+  make -C contrib/credential/gnome-keyring
+  make -C contrib/credential/libsecret
   make -C contrib/subtree "${_make_paths[@]}" all man
   make -C contrib/mw-to-git "${_make_paths[@]}" all
   make -C contrib/diff-highlight "${_make_paths[@]}"
@@ -104,13 +104,13 @@ package() {
   install -m 0644 ./contrib/completion/git-prompt.sh "$pkgdir"/usr/share/git/git-prompt.sh
   # gnome credentials helper (deprecated, but we will keep it as long there is no extra cost)
   # https://gitlab.gnome.org/GNOME/libgnome-keyring/commit/6a5adea4aec93
-  #install -m 0755 contrib/credential/gnome-keyring/git-credential-gnome-keyring \
-  #    "$pkgdir"/usr/lib/git-core/git-credential-gnome-keyring
-  #make -C contrib/credential/gnome-keyring clean
+  install -m 0755 contrib/credential/gnome-keyring/git-credential-gnome-keyring \
+      "$pkgdir"/usr/lib/git-core/git-credential-gnome-keyring
+  make -C contrib/credential/gnome-keyring clean
   # libsecret credentials helper
-  #install -m 0755 contrib/credential/libsecret/git-credential-libsecret \
-  #    "$pkgdir"/usr/lib/git-core/git-credential-libsecret
-  #make -C contrib/credential/libsecret clean
+  install -m 0755 contrib/credential/libsecret/git-credential-libsecret \
+      "$pkgdir"/usr/lib/git-core/git-credential-libsecret
+  make -C contrib/credential/libsecret clean
   # subtree installation
   make -C contrib/subtree "${_make_paths[@]}" DESTDIR="$pkgdir" install install-man
   # mediawiki installation
