* add xorg-iceauth for riscv64

--- a/xorg/xorg-iceauth/PKGBUILD
+++ b/xorg/xorg-iceauth/PKGBUILD
@@ -6,7 +6,8 @@ pkgname=xorg-iceauth
 pkgver=1.0.8
 pkgrel=2
 pkgdesc="ICE authority file utility"
-arch=( x86_64 powerpc64le powerpc )
+arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libice')
