* update libx11 to 1.7.3.1-1

--- a/xorg/libx11/PKGBUILD
+++ b/xorg/libx11/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libx11
-pkgver=1.7.2
+pkgver=1.7.3.1
 pkgrel=1
 pkgdesc="X11 client-side library"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -13,8 +13,8 @@ url="https://xorg.freedesktop.org/"
 depends=('libxcb' 'xorgproto')
 makedepends=('xorg-util-macros' 'xtrans')
 license=('custom')
-source=(${url}/releases/individual/lib/libX11-${pkgver}.tar.bz2{,.sig})
-sha512sums=('d01e5c1848c76218605e5af2d353de6b301a251555b52a38dbe930e6635d5e8a92d1486eb6d328ad5d42a5939e0d16868ffa19a75e5a7863d1a32e0d0727bdc7'
+source=(${url}/releases/individual/lib/libX11-${pkgver}.tar.xz{,.sig})
+sha512sums=('a2620076db4bf35ab94706c8ab714e9c3fecbdd533cf99cdffeabaf49a1a1d30a233eb2dc76da51b01d50c43f11780aa3b2936668d982a33fa7d5008be44e25b'
             'SKIP')
 validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # Alan Coopersmith <alanc@freedesktop.org>
 #validpgpkeys=('C41C985FDCF1E5364576638B687393EE37D128F8') # Matthieu Herrb <matthieu.herrb@laas.fr>
